# ckks_bench

./: README.md
FIDESlib/: .gitignore  CMakeLists.txt  Dummy.cu  GPUTest.cu  README.md
FIDESlib/bench/: Benchmark.cu  Benchmark.cuh  BootstrapBenchmarks.cu  CiphertextAddBenchmarks.cu  CiphertextModUpModDownBenchmarks.cu  CiphertextMultiplicationBenchmarks.cu  CiphertextRotationBenchmarks.cu  ContextBenchmarks.cu  LimbBatchAddSubBenchmarks.cu  LimbNTTBenchmarks.cu  MatrixVectorMultiplicationBenchmarks.cu  PlaintextMultiplicationBenchmarks.cu  RNSPolyAdditionBenchmarks.cu  RNSPolyModUpModDownBenchmarks.cu  RNSPolyRescaleBenchmarks.cu  bench.sh
FIDESlib/cmake/: CMakeLists.OpenFHEPatch.txt  CMakeLists.txt  FIDESlibConfig.cmake.in  openfhe-base.patch  openfhe-hook.patch
FIDESlib/custom_benchmark/: custom_benchmark.cu
FIDESlib/docker/: Dockerfile.NVIDIA
FIDESlib/examples/logistic_regression/: .gitignore  CMakeLists.txt  README.md
FIDESlib/examples/logistic_regression/data/: mnist.py  random_dataset.py
FIDESlib/examples/logistic_regression/src/: crypt.cpp  crypt.hpp  data.cpp  data.hpp  encoding.cpp  encoding.hpp  fhe.cpp  fhe.hpp  fides.cu  fides.cuh  helper.cpp  helper.hpp  main.cu  naive.cpp  naive.hpp  train.cu  train.cuh
FIDESlib/examples/logistic_regression/times/: statistics_gen.py  train_statistics_gen.py  val_statistics_gen.py
FIDESlib/examples/template/: CMakeLists.txt
FIDESlib/examples/template/src/: context.cpp  context.hpp  main.cu
FIDESlib/include/: ConstantsGPU.cuh  CudaUtils.cuh  ModMult.cuh  NTT.cuh  NTTdynamicParallelism.cuh  NTTfusions.cuh  Rotation.cuh  VectorGPU.cuh  ntt_types.inc
FIDESlib/include/CKKS/: ApproxModEval.cuh  Bootstrap.cuh  BootstrapPrecomputation.cuh  Ciphertext.cuh  Context.cuh  Conv.cuh  ElemenwiseBatchKernels.cuh  KeySwitchingKey.cuh  Limb.cuh  LimbPartition.cuh  Parameters.cuh  Plaintext.cuh  RNSPoly.cuh  forwardDefs.cuh
FIDESlib/include/CKKS/openfhe-interface/: RawCiphertext.cuh
FIDESlib/src/CKKS/: Bootstrap.cu  Context.cu
FIDESlib/test/: BaseTests.cu  LimbKernelTest.cu  NTTtests.cu  NegacyclicNTTtests.cu  OpenFheInterfaceTests.cu  ParametrizedTest.cuh  RotationTests.cu  cpuNTT.cpp  cpuNTT_nega.cpp
cheddar-fhe/: Dockerfile  README.md
cheddar-fhe/parameters/: bootparam_30_custom.json
cheddar-fhe/unittest/: CMakeLists.txt  custom_benchmark.cpp
phantom-fhe/: CMakeLists.txt  README.md
phantom-fhe/custom_benchmark/: CMakeLists.txt  custom_benchmark.cu
